<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/panel_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textColor="@color/font_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/en_us"
            android:textColor="@color/background_color" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:background="@color/divider_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/push_notification"
        android:textColor="@color/font_dark"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/panel_deals_and_rewards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_normal"
        android:paddingStart="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/new_deals_and_rewards" />

        <Switch
            android:id="@+id/switch_deals_and_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:background="@color/divider_color" />

    <RelativeLayout
        android:id="@+id/panel_occasional_promos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_normal"
        android:paddingStart="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/occasional_promos" />

        <Switch
            android:id="@+id/switch_occasional_promos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:background="@color/divider_color" />

    <RelativeLayout
        android:id="@+id/panel_recommend_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_normal"
        android:paddingStart="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/recommended_restaurants" />

        <Switch
            android:id="@+id/switch_recommended_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/panel_clear_image_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal"
        android:text="@string/clear_image_caches"
        android:textColor="@color/font_dark"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/panel_clear_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal"
        android:text="@string/clear_search_history"
        android:textColor="@color/font_dark"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/panel_licences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal"
        android:text="@string/licenses"
        android:textColor="@color/font_dark"
        android:textStyle="bold" />


</LinearLayout>