<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/search_item_size"
    android:layout_margin="@dimen/margin_extra_small"
    android:elevation="@dimen/card_elevation"
    card_view:cardCornerRadius="@dimen/card_conner_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:layout_margin="@dimen/margin_extra_small"
            android:background="@color/font_light"
            android:src="@drawable/placeholder" />


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_extra_small"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:layout_toEndOf="@id/img_search"
            android:text="Sample Name"
            android:textColor="@color/font_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_cost_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_name"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/average_cost" />

        <TextView
            android:id="@+id/tv_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/tv_cost_title"
            android:layout_alignStart="@id/tv_cost_title"
            android:layout_below="@id/tv_cost_title"
            android:layout_marginTop="5dp"
            android:text="$23"
            android:textAlignment="center"
            android:textColor="@color/background_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_keywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginStart="@dimen/margin_extra_small"
            android:layout_alignBottom="@id/tv_cost"
            android:ellipsize="end"
            android:layout_toEndOf="@id/img_search"
            android:layout_toStartOf="@id/tv_cost_title"
            android:text="Sample keywords"
            android:textSize="12sp" />

        <LinearLayout
            android:gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/margin_extra_small"
            android:layout_marginEnd="@dimen/margin_extra_small"
            android:layout_marginStart="@dimen/margin_extra_small"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:layout_toEndOf="@id/img_search">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance" />

                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="21 km"
                    android:textColor="@color/font_dark"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likes" />

                <TextView
                    android:id="@+id/tv_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="102"
                    android:textColor="@color/font_dark"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seats" />

                <TextView
                    android:id="@+id/tv_seats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14"
                    android:textColor="@color/font_dark"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>


</android.support.v7.widget.CardView>